--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "name": "ARMELION Men's Wear",
   "short_name": "ARMELION",
+  "description": "Premium Men's Fashion Brand",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
       "src": "logo.jpg",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/jpeg",
+      "purpose": "any maskable"
     }
   ]
 }
