--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,20 @@
 {
-  "name": "ARMELION Men's Wear",
+  "name": "ARMELION",
   "short_name": "ARMELION",
-  "description": "Premium Men's Fashion Brand",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "logo.jpg",
+      "src": "initials.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "initials.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
