--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   {
   "icons": [
     {
-      "src": "initials.png", 
+      "src": "initial.png", 
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "initials.png",
+      "src": "initial.png",
       "sizes": "512x512",
       "type": "image/png"
     }
